# hscore-client

./: .gitignore  README.md  pyproject.toml
hscore/: __init__.py  _fingerprint.py  activate.py  license.py  model.py  scorer.py
